[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pint_lib"
version = "0.2.9"
description = "PubMed Integrated NLP Tool (PINT)"
readme = "README.md"
authors = [{ name = "Anthony McCabe", email = "a.mccabe@liverpool.ac.uk" }]
license = { text = "MIT" }
dependencies = [
    "requests",
    "pdfminer.six",
    "openpyxl",
    "anthropic",
    "openai",
]

[project.optional-dependencies]
gui = ["tkinter"]

[project.scripts]
pint = "pint_lib.main:main"
